# InChI

./: CMakeLists.txt  InChITrust_readme.txt  README.md
include/inchi/api/: inchi_dll_a.h
include/inchi/api/ixa/: ixa_mol.h  ixa_status.h
include/inchi/base/: extr_ct.h  ichi.h  ichi_bns.h  ichi_io.h  ichicano.h  ichicant.h  ichicomn.h  ichidrp.h  ichimain.h  ichimake.h  ichinorm.h  ichiring.h  ichirvrs.h  ichister.h  ichitaut.h  inchi_api.h  inchi_gui.h  incomdef.h  inpdef.h  mode.h  mol_fmt.h  strutil.h  util.h
src/inchi/api/: CMakeLists.txt  ichilnct.c  inchi_dll.c  inchi_dll_a.c  inchi_dll_a2.c  inchi_dll_b.c
src/inchi/api/ixa/: CMakeLists.txt  ixa_builder.c  ixa_inchikey_builder.c  ixa_mol.c  ixa_read_inchi.c  ixa_read_mol.c  ixa_status.c
src/inchi/base/: CMakeLists.txt  ichi_bns.c  ichi_io.c  ichican2.c  ichicano.c  ichicans.c  ichierr.c  ichiisot.c  ichimak2.c  ichimake.c  ichimap1.c  ichimap2.c  ichimap4.c  ichinorm.c  ichiparm.c  ichiprt1.c  ichiprt2.c  ichiprt3.c  ichiqueu.c  ichiread.c  ichiring.c  ichirvr1.c  ichirvr2.c  ichirvr3.c  ichirvr4.c  ichirvr5.c  ichirvr6.c  ichirvr7.c  ichisort.c  ichister.c  ichitaut.c  ikey_base26.c  ikey_dll.c  inchi_gui.c  mol2atom.c  mol_fmt1.c  mol_fmt2.c  mol_fmt3.c  mol_fmt4.c  readinch.c  (+7 more)
